--- a/.github/workflows/api-datatruyen.yml
+++ b/.github/workflows/api-datatruyen.yml
@@ -1,47 +1,64 @@
-name: API DataTruyen CI/CD  
+name: API DataTruyen CI/CD
 
-on:  
-  push:  
-    branches: [ main ]  
-    paths:  
-      - 'Services/api_datatruyen/**'  
-  pull_request:  
-    branches: [ main ]  
-    paths:  
-      - 'Services/api_datatruyen/**'  
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'Services/api_datatruyen/**'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'Services/api_datatruyen/**'
 
-jobs:  
-  build-and-push:  
-    runs-on: ubuntu-latest  
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
     
-    steps:  
-    - name: Checkout code  
-      uses: actions/checkout@v4  
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up Python  
-      uses: actions/setup-python@v5  
-      with:  
-        python-version: '3.11'  
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
-    - name: Install dependencies & lint  
-      working-directory: ./Services/api_datatruyen  
-      run: |  
-        python -m pip install --upgrade pip  
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  
-        pip install flake8  
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true  
+    - name: Install dependencies & lint
+      working-directory: ./Services/api_datatruyen
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install flake8
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
 
-    - name: Log in to ACR  
-      uses: docker/login-action@v3  
-      with:  
-        registry: ${{ secrets.ACR_SERVER }}  
-        username: ${{ secrets.ACR_USERNAME }}  
-        password: ${{ secrets.ACR_PASSWORD }}  
+    - name: Log in to ACR
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ secrets.ACR_SERVER }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Build and push Docker image  
-      working-directory: ./Services/api_datatruyen  
-      run: |  
-        docker build -t ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }} .  
-        docker tag ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }} ${{ secrets.ACR_SERVER }}/api-datatruyen:latest  
-        docker push ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }}  
-        docker push ${{ secrets.ACR_SERVER }}/api-datatruyen:latest  
+    - name: Build and push Docker image
+      working-directory: ./Services/api_datatruyen
+      run: |
+        docker build \
+          --build-arg MONGODB_DATA_API=${{ secrets.MONGODB_DATA_API }} \
+          --build-arg MONGODB_DATA_DB=${{ secrets.MONGODB_DATA_DB }} \
+          --build-arg EXTERNAL_API=${{ secrets.EXTERNAL_API }} \
+          --build-arg IMAGE_API=${{ secrets.IMAGE_API }} \
+          -t ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }} .
+        docker tag ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }} ${{ secrets.ACR_SERVER }}/api-datatruyen:latest
+        docker push ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }}
+        docker push ${{ secrets.ACR_SERVER }}/api-datatruyen:latest
+
+    - name: Update K8s deployment
+      if: github.event_name == 'push'
+      run: |
+        sed -i "s|image:.*api-datatruyen:.*|image: ${{ secrets.ACR_SERVER }}/api-datatruyen:${{ github.sha }}|g" k8s/applications/api-datatruyen/deployment.yaml
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add k8s/applications/api-datatruyen/deployment.yaml
+        git diff --staged --quiet || git commit -m "Update api-datatruyen image to ${{ github.sha }}"
+        git push
