--- a/.github/workflows/ui-main.yml
+++ b/.github/workflows/ui-main.yml
@@ -1,49 +1,65 @@
-name: UI Main CI/CD  
+name: UI Main CI/CD
 
-on:  
-  push:  
-    branches: [ main ]  
-    paths:  
-      - 'Services/ui_main/**'  
-  pull_request:  
-    branches: [ main ]  
-    paths:  
-      - 'Services/ui_main/**'  
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'Services/ui_main/**'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'Services/ui_main/**'
 
-jobs:  
-  build-and-push:  
-    runs-on: ubuntu-latest  
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
     
-    steps:  
-    - name: Checkout code  
-      uses: actions/checkout@v4  
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up Node.js  
-      uses: actions/setup-node@v4  
-      with:  
-        node-version: '20'  
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
 
-    - name: Install dependencies & lint  
-      working-directory: ./Services/ui_main  
-      run: |  
-        yarn install  
-        yarn lint || echo "Lint not configured, skipping..."  
+    - name: Install dependencies & lint
+      working-directory: ./Services/ui_main
+      run: |
+        yarn install
+        yarn lint || echo "Lint not configured, skipping..."
 
-    - name: Build application  
-      working-directory: ./Services/ui_main  
-      run: yarn build || echo "Build step handled by Docker"  
+    - name: Build application
+      working-directory: ./Services/ui_main
+      run: yarn build || echo "Build step handled by Docker"
 
-    - name: Log in to ACR  
-      uses: docker/login-action@v3  
-      with:  
-        registry: ${{ secrets.ACR_SERVER }}  
-        username: ${{ secrets.ACR_USERNAME }}  
-        password: ${{ secrets.ACR_PASSWORD }}  
+    - name: Log in to ACR
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ secrets.ACR_SERVER }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Build and push Docker image  
-      working-directory: ./Services/ui_main  
-      run: |  
-        docker build -t ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }} .  
-        docker tag ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }} ${{ secrets.ACR_SERVER }}/ui-main:latest  
-        docker push ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }}  
-        docker push ${{ secrets.ACR_SERVER }}/ui-main:latest  
+    - name: Build and push Docker image
+      working-directory: ./Services/ui_main
+      run: |
+        docker build \
+          --build-arg VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }} \
+          --build-arg VITE_OTRUYEN_API_BASE_URL=${{ secrets.VITE_OTRUYEN_API_BASE_URL }} \
+          --build-arg VITE_APP_ENV=${{ secrets.VITE_APP_ENV }} \
+          -t ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }} .
+        docker tag ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }} ${{ secrets.ACR_SERVER }}/ui-main:latest
+        docker push ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }}
+        docker push ${{ secrets.ACR_SERVER }}/ui-main:latest
+
+    - name: Update K8s deployment
+      if: github.event_name == 'push'
+      run: |
+        sed -i "s|image:.*ui-main:.*|image: ${{ secrets.ACR_SERVER }}/ui-main:${{ github.sha }}|g" k8s/applications/ui-main/deployment.yaml
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add k8s/applications/ui-main/deployment.yaml
+        git diff --staged --quiet || git commit -m "Update ui-main image to ${{ github.sha }}"
+        git push
