--- a/.github/workflows/ui-admin.yml
+++ b/.github/workflows/ui-admin.yml
@@ -10,6 +10,9 @@ on:
     paths:
       - 'Services/ui_admin/**'
 
+permissions:
+  contents: write
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -18,7 +21,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.REPO_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v5
