--- a/.github/workflows/api-datatruyen.yml
+++ b/.github/workflows/api-datatruyen.yml
@@ -9,6 +9,7 @@ on:
     branches: [ main ]
     paths:
       - 'Services/api_datatruyen/**'
+  workflow_dispatch:
 
 permissions:
   contents: write
