--- a/.github/workflows/api-otruyen.yml
+++ b/.github/workflows/api-otruyen.yml
@@ -48,7 +48,10 @@ jobs:
       working-directory: ./Services/api_otruyen
       run: |
         set -xe
-        docker build --build-arg MONGODB_URI=${{ secrets.MONGODB_URI }} --build-arg DB_NAME=${{ secrets.DB_NAME }} -t ${{ secrets.ACR_SERVER }}/api-otruyen:${{ github.sha }} .
+        docker build \
+          --build-arg "MONGODB_URI=${{ secrets.MONGODB_URI }}" \
+          --build-arg "DB_NAME=${{ secrets.DB_NAME }}" \
+          -t ${{ secrets.ACR_SERVER }}/api-otruyen:${{ github.sha }} .
         docker tag ${{ secrets.ACR_SERVER }}/api-otruyen:${{ github.sha }} ${{ secrets.ACR_SERVER }}/api-otruyen:latest
         docker push ${{ secrets.ACR_SERVER }}/api-otruyen:${{ github.sha }}
         docker push ${{ secrets.ACR_SERVER }}/api-otruyen:latest
