Update ingress path and pathType for ui-admin

--- a/k8s/applications/ui-admin/ingress.yaml
+++ b/k8s/applications/ui-admin/ingress.yaml
@@ -8,8 +8,8 @@ spec:
   rules:
   - http:
       paths:
-      - path: /admin
-        pathType: Prefix
+      - path: /admin(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: ui-admin
