Add rewrite-target annotation to ui-admin ingress
Added rewrite-target annotation for nginx ingress.

--- a/k8s/applications/ui-admin/ingress.yaml
+++ b/k8s/applications/ui-admin/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: ui-admin
   namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
