--- a/Services/ui_main/Dockerfile
+++ b/Services/ui_main/Dockerfile
@@ -5,8 +5,6 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package.json and yarn.lock first to leverage Docker cache
-#sdklfjdslkf
-# (This prevents re-installing dependencies if only source code changes)
 COPY package.json yarn.lock ./
 
 # Install dependencies
@@ -15,7 +13,12 @@ RUN yarn install
 # Copy the rest of the application code
 COPY . .
 
-# Expose port 3000 (Adjust this if your app runs on a different port, e.g., 5173 for Vite)
+# --- ADD THIS LINE ---
+# This generates the .nuxt folder specifically for the container environment
+RUN npx nuxi prepare
+# ---------------------
+
+# Expose port 3000
 EXPOSE 3000
 
 # Start the application
